--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,33 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# 依存関係
+node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
+# ビルドファイル
+dist/
+build/
+.cache/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Firebase
+.firebase/
+.firebase-debug.log
+firebase-debug.log
+hosting.*.cache
 
-
+# 環境変数
 .env
+.env.local
+.env.*.local
+
+# エディタ設定
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# その他
+metadata.json
+*.log
