--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,33 @@
-# 依存関係
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# ビルドファイル
+node_modules
 dist/
-build/
-.cache/
+dist-ssr
+*.local
 
-# Firebase
-.firebase/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
+# ビルドファイルを除外
+/dist
+/build
+/.firebase
 .firebase-debug.log
 firebase-debug.log
-hosting.*.cache
-
-# 環境変数
 .env
-.env.local
-.env.*.local
-
-# エディタ設定
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# その他
-metadata.json
-*.log
